--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ layout: default
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                        <img src="images/about/about.jpg" alt="">
+                        <img src="images/annie-spratt-66432-min.jpg" alt="">
                     </div>
                 </div>
             </div>
