All static web content replicated

--- a/decide.html
+++ b/decide.html
@@ -1,6 +1,7 @@
+--- 
+layout: default 
 ---
-layout: default
----
+
 <!--
     ==================================================
     Slider Section Start
@@ -74,7 +75,7 @@ layout: default
         </div>
     </div>
 </section>
-<section id="works" class="works">
+<section id="routine" class="works">
     <div class="container">
         <div class="section-heading">
             <h1 class="title wow fadeInDown" data-wow-delay=".3s">Routine</h1>
@@ -86,110 +87,26 @@ layout: default
         </div>
     </div>
 </section>
-<!-- #works -->
-<!--
-        ==================================================
-        Portfolio Section Start
-        ================================================== -->
-<!-- <section id="feature">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-lg-6 col-xs-12">
-                        <div class="media wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
-                            <div class="media-left">
-                                <div class="icon">
-                                    <i class="ion-ios-flask-outline"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xs-12">
-                        <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="600ms">
-                            <div class="media-left">
-                                <div class="icon">
-                                    <i class="ion-ios-lightbulb-outline"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Well documented.</h4>
-                                <p>You are encouraged to let staff know details of your child’s routine, special dietary requirements, likes and dislikes and anything else that you may think is important. There will always be a member of the team available to tell you about your child’s day.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xs-12">
-                            <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="900ms">
-                            <div class="media-left">
-                                <div class="icon">
-                                    <i class="ion-ios-lightbulb-outline"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Well documented.</h4>
-                                <p>All children are treated as individuals and encouraged to develop at their own pace. We also follow strict guidelines on equality, and celebrate the cultural diversity of our children. We adopt the same approach when dealing with parents/carers,’ religious and personal beliefs.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-xs-12">
-                            <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="1200ms">
-                            <div class="media-left">
-                                <div class="icon">
-                                    <i class="ion-ios-americanfootball-outline"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Free updates</h4>
-                                <p>Discipline is approached in a positive manner. We reward and encourage children to behave in an acceptable way and to care and respect each other. Smacking or the use of punishment is strictly prohibited.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>  -->
-<!-- /#feature -->
-
-
-                ==================================================
-                Footer Section Start
-                ================================================== -->
-<footer id="footer">
+<section id="equality" class="works">
     <div class="container">
-        <div class="col-md-8">
-            <p class="copyright">Copyright:
-                <span>
-                    <script>document.write(new Date().getFullYear())</script>
-                </span> Design and Developed by
-                <a href="http://www.Themefisher.com" target="_blank">Themefisher</a>.
-                <br> Get More
-                <a href="https://themefisher.com/free-bootstrap-templates/" target="_blank">
-                    Free Bootstrap Templates
-                </a>
+        <div class="section-heading">
+            <h1 class="title wow fadeInDown" data-wow-delay=".3s">Equality</h1>
+            <p class="wow fadeInDown" data-wow-delay=".5s">
+                All children are treated as individuals and encouraged to develop at their own pace. We also follow strict guidelines on
+                equality, and celebrate the cultural diversity of our children. We adopt the same approach when dealing with
+                parents/carers,’ religious and personal beliefs.
             </p>
         </div>
-        <div class="col-md-4">
-            <!-- Social Media -->
-            <ul class="social">
-                <li>
-                    <a href="http://wwww.fb.com/themefisher" class="Facebook">
-                        <i class="ion-social-facebook"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://wwww.twitter.com/themefisher" class="Twitter">
-                        <i class="ion-social-twitter"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="Linkedin">
-                        <i class="ion-social-linkedin"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="http://wwww.fb.com/themefisher" class="Google Plus">
-                        <i class="ion-social-googleplus"></i>
-                    </a>
-                </li>
-            </ul>
+    </div>
+</section>
+<section id="reward" class="works">
+    <div class="container">
+        <div class="section-heading">
+            <h1 class="title wow fadeInDown" data-wow-delay=".3s">Reward</h1>
+            <p class="wow fadeInDown" data-wow-delay=".5s">
+                Discipline is approached in a positive manner. We reward and encourage children to behave in an acceptable way and to care
+                and respect each other. Smacking or the use of punishment is strictly prohibited.
+            </p>
         </div>
     </div>
-</footer>
-<!-- /#footer -->
+</section>
