--- a/development.html
+++ b/development.html
@@ -1,6 +1,7 @@
+--- 
+layout: default 
 ---
-layout: default
----
+
 <!--
     ==================================================
     Slider Section Start
@@ -12,22 +13,15 @@ layout: default
                 <div class="block wow fadeInUp" data-wow-delay=".3s">
                     <!-- Slider -->
                     <section class="cd-intro">
-
-                        <img src="images/ciaras.png">
-
                         <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
-                            <!-- <span>Ciara's Tots Private Day Nursery</span><br> -->
-                            <span class="cd-words-wrapper">
-                                <b class="is-visible">PLAY</b>
-                                <b>LEARN</b>
-                                <b>GROW</b>
-                            </span>
+                            <span>Physical Development</span>
+                            <br>
                         </h1>
                     </section>
                     <!-- cd-intro -->
                     <!-- /.slider -->
                     <h2 class="wow fadeInUp animated" data-wow-delay=".6s">
-                        Providing a warm, caring and stimulating environment catering for the needs of each individual child.
+                        Start your child's development off in the best possible way
                     </h2>
                 </div>
             </div>
@@ -46,18 +40,18 @@ layout: default
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
                     <h2>
-                        ABOUT US
+                        PHYSICAL WELLBEING
                     </h2>
+
                     <p>
-                        Ciara’s Tots Private Day Nursery is a small ‘family run’ nursery situated in Chorlton-On-Medlock. We are OFSTED registered
-                        and offer an excellent childcare provision in a safe, secure, welcoming and attractive environment.
-                        CCTV has also been installed for added security. The nursery was purpose built in July 2003, so all
-                        fittings are new.
-                    </p>
-                    <p>
-                        We carefully select our staff team not only for their professional childcare qualifications and experience, but also for
-                        their personal qualities, their commitment to provide each child with quality care, and their continuing
-                        enthusiasm to develop their skills through further training.
+                        Physical development is actively encouraged at Ciara’s Tots Private Day Nursery and to reinforce the importance of ‘exercise’ we have deployed a ‘sport specific’ programme for our children.  The ‘Playmakers’ programme is tailored towards each stage of the child’s physical and mental development, working specifically around five main topics (balance, co-ordination, ball skills, target-based games and communication).  The overall programme is designed to allow children to express themselves freely as individuals whilst participating in a group environment.
+                        <br />
+                        <br />
+Likewise, we employ a ‘Dance Teacher’ to fortify our commitment to physical development. The dance curriculum is designed to enable children to participate in dance activities that are developmentally appropriate, helping to facilitate the learning of dance through skills at a later age.  It helps to capture and nurture young children’s instinctive joy of movement and freedom of expression.
+<br />
+<br />
+Photographs of the children having fun following the programmes are displayed in the <a href="#">Gallery</a> section.
+
                     </p>
                 </div>
 
@@ -70,25 +64,6 @@ layout: default
         </div>
     </div>
 </section>
-<!-- /#about -->
-
-<!--
-    ==================================================
-    Portfolio Section Start
-    ================================================== -->
-<section id="works" class="works">
-    <div class="container">
-        <div class="section-heading">
-            <h1 class="title wow fadeInDown" data-wow-delay=".3s">Ethos</h1>
-            <p class="wow fadeInDown" data-wow-delay=".5s">
-                Our ‘mission statement’ and ‘nursery ethos’ is to create a nurturing environment that is happy for both the children and
-                staff. Our fundamental aim is to care for the children and then to facilatate learning. Happy children equates
-                to a happy nursery and this is what Ciara’s Tots stands for.
-            </p>
-        </div>
-    </div>
-</section>
-
 
 <section id="call-to-action">
     <div class="container">
@@ -104,3 +79,7 @@ layout: default
         </div>
     </div>
 </section>
+<!-- /#about -->
+
+
+
