More images added

--- a/decide.html
+++ b/decide.html
@@ -6,7 +6,7 @@ layout: default
     ==================================================
     Slider Section Start
     ================================================== -->
-<section id="hero-area">
+<section id="hero-area" class="hero-decide">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -52,7 +52,7 @@ layout: default
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="images/annie-spratt-66432-min.jpg" alt="">
+                    <img src="images/crayons.jpg" alt="">
                 </div>
             </div>
         </div>
