--- a/development.html
+++ b/development.html
@@ -6,7 +6,7 @@ layout: default
     ==================================================
     Slider Section Start
     ================================================== -->
-<section id="hero-area">
+<section id="hero-area" class="hero-dev">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -58,7 +58,7 @@ Photographs of the children having fun following the programmes are displayed in
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="images/annie-spratt-66432-min.jpg" alt="">
+                    <img src="images/blocks.jpg" alt="">
                 </div>
             </div>
         </div>
