--- a/gallery.html
+++ b/gallery.html
@@ -6,11 +6,11 @@ layout: default
     <div class="container">
         <div class="row">
             <ul id="lightSlider">
-                {% for image in site.photo_gallery %}
+                <!-- {% for image in site.photo_gallery %}
                     <li data-thumb="{{ image.image_path }}">
                         <img src="{{ image.image_path }}" />
                     </li>
-                {% endfor %}
+                {% endfor %} -->
             </ul>
         </div>
     </div>
