Index front matter updated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+permalink: Home
+title: Home | Ciara's Tots
 ---
 <!--
     ==================================================
