Images and facebook link

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 --- 
 layout: default 
-permalink: {{ site.baseurl }}/Contact
+permalink: /Contact
 title: Contact
 ---
 
@@ -13,9 +13,8 @@ title: Contact
         <div class="row">
             <div class="col-md-5 col-sm-5">
                 <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <h2>
-                            Contact Us
-                    </h2>
+                    <h2>Contact Us</h2>
+                    
 
                     <h3>Telephone</h3>
 
@@ -35,6 +34,9 @@ M13 0FB                 <br />
                             <br />
 
                     </p>
+
+                    <h3>Facebook</h3>
+                    <a href="https://www.facebook.com/Ciaras-Tots-1172980112729771/">Ciara's Tots</a>
 
                     <h3>Email</h3>
                     <a href="mailto:contact@ciarastots.com">contact@ciarastots.com</a>
