--- a/development.html
+++ b/development.html
@@ -74,7 +74,7 @@ Photographs of the children having fun following the programmes are displayed in
                 <div class="block">
                     <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">GET IN TOUCH</h2>
                         <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Contact us now if you want to find out more about our services</p>
-                        <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact</a>
+                        <a href="contact" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact</a>
                 </div>
             </div>
 
