--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
                     <!-- Slider -->
                     <section class="cd-intro">
 
-                        <img src="images/ciaras.png">
+                        <img src="{{ site.gitprefix }}/images/ciaras.png">
 
                         <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
                             <!-- <span>Ciara's Tots Private Day Nursery</span><br> -->
