--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ title: Home
                 <div class="block">
                     <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">GET IN TOUCH</h2>
                         <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Contact us now if you want to find out more about our services</p>
-                        <a href="Contact/" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact</a>
+                        <a href="{{ site.gitprefix }}/Contact/" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact</a>
                 </div>
             </div>
 
