--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@ M13 0FB                 <br />
         <br />
         <br />
         The nursery has a designated drop-off zone for parents at the front of the building.</p>
-        <img src="images/map.gif" />
+        <img src="{{ site.gitprefix }}/images/map.gif" />
                 </div>
             </div>
         </div>
