--- a/curriculum.html
+++ b/curriculum.html
@@ -54,7 +54,7 @@ title: Curriculum
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="images/paint.jpg" alt="">
+                    <img src="{{ site.gitprefix }}/images/paint.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@ title: Curriculum
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="images/annie-spratt-66432-min.jpg" alt="">
+                    <img src="{{ site.gitprefix }}/images/annie-spratt-66432-min.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@ title: Curriculum
             
                 <div class="col-md-6 col-sm-6">
                         <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
-                            <img src="images/paint2.jpg" alt="">
+                            <img src="{{ site.gitprefix }}/images/paint2.jpg" alt="">
                         </div>
                     </div>
             <div class="col-md-6 col-sm-6">
@@ -156,7 +156,7 @@ Such things as messy play and creative play will be introduced. Activities are c
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                        <img src="images/jelleke-vanooteghem-381347-min.jpg" alt="">
+                        <img src="{{ site.gitprefix }}/images/jelleke-vanooteghem-381347-min.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@ Such things as messy play and creative play will be introduced. Activities are c
             
                 <div class="col-md-6 col-sm-6">
                         <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
-                            <img src="images/toy.jpg" alt="">
+                            <img src="{{ site.gitprefix }}/images/toy.jpg" alt="">
                         </div>
                     </div>
             <div class="col-md-6 col-sm-6">
@@ -260,7 +260,7 @@ Such things as messy play and creative play will be introduced. Activities are c
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                        <img src="images/blocks.jpg" alt="">
+                        <img src="{{ site.gitprefix }}/images/blocks.jpg" alt="">
                     </div>
                 </div>
             </div>
