--- a/development.html
+++ b/development.html
@@ -60,7 +60,7 @@ Photographs of the children having fun following the programmes are displayed in
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="images/blocks.jpg" alt="">
+                    <img src="{{ site.gitprefix }}/images/blocks.jpg" alt="">
                 </div>
             </div>
         </div>
