Gllery v2 front matter

--- a/galleryv2.html
+++ b/galleryv2.html
@@ -1,5 +1,7 @@
 ---
 layout: default 
+permalink: "/GalleryV2/" 
+title: GalleryV2 
 images:
     - image_path: "/ciarastotspublic/images/blocks.jpg"
     - image_path: "/ciarastotspublic/images/girl.jpg"
