git prefix remove

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
                     <!-- Slider -->
                     <section class="cd-intro">
 
-                        <img src="{{ site.gitprefix }}/images/ciaras.png">
+                        <img src="/ciarastotspublic/images/ciaras.png">
 
                         <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
                             <!-- <span>Ciara's Tots Private Day Nursery</span><br> -->
@@ -66,7 +66,7 @@ title: Home
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="{{ site.gitprefix }}/images/annie-spratt-66432-min.jpg" alt="">
+                    <img src="/ciarastotspublic/images/annie-spratt-66432-min.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@ title: Home
                 <div class="block">
                     <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">GET IN TOUCH</h2>
                         <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Contact us now if you want to find out more about our services</p>
-                        <a href="{{ site.gitprefix }}/Contact/" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact</a>
+                        <a href="/ciarastotspublic/Contact/" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact</a>
                 </div>
             </div>
 
