--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@ M13 0FB                 <br>
         <br>
         <br>
         The nursery has a designated drop-off zone for parents at the front of the building.</p>
-        <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/map.gif">
+        <img src="/ciarastotspublic/images/map.gif">
                 </div>
             </div>
         </div>
