--- a/curriculum.html
+++ b/curriculum.html
@@ -53,7 +53,7 @@ title: Curriculum
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/paint.jpg" alt="">
+                    <img src="/ciarastotspublic/images/paint.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@ title: Curriculum
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/annie-spratt-66432-min.jpg" alt="">
+                    <img src="/ciarastotspublic/images/annie-spratt-66432-min.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@ title: Curriculum
             
                 <div class="col-md-6 col-sm-6">
                         <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
-                            <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/paint2.jpg" alt="">
+                            <img src="/ciarastotspublic/images/paint2.jpg" alt="">
                         </div>
                     </div>
             <div class="col-md-6 col-sm-6">
@@ -150,7 +150,7 @@ Such things as messy play and creative play will be introduced. Activities are c
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                        <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/jelleke-vanooteghem-381347-min.jpg" alt="">
+                        <img src="/ciarastotspublic/images/jelleke-vanooteghem-381347-min.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@ Such things as messy play and creative play will be introduced. Activities are c
             
                 <div class="col-md-6 col-sm-6">
                         <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
-                            <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/toy.jpg" alt="">
+                            <img src="/ciarastotspublic/images/toy.jpg" alt="">
                         </div>
                     </div>
             <div class="col-md-6 col-sm-6">
@@ -253,7 +253,7 @@ Such things as messy play and creative play will be introduced. Activities are c
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                        <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/blocks.jpg" alt="">
+                        <img src="/ciarastotspublic/images/blocks.jpg" alt="">
                     </div>
                 </div>
             </div>
