--- a/decide.html
+++ b/decide.html
@@ -53,7 +53,7 @@ title: Helping Decide
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/crayons.jpg" alt="">
+                    <img src="/ciarastotspublic/images/crayons.jpg" alt="">
                 </div>
             </div>
         </div>
