--- a/development.html
+++ b/development.html
@@ -55,7 +55,7 @@ Photographs of the children having fun following the programmes are displayed in
             </div>
             <div class="col-md-6 col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="%7B%7B%20site.gitprefix%20%7D%7D/images/blocks.jpg" alt="">
+                    <img src="/ciarastotspublic/images/blocks.jpg" alt="">
                 </div>
             </div>
         </div>
