--- a/ciarastotspublic/curriculum.html
+++ b/ciarastotspublic/curriculum.html
@@ -7,7 +7,7 @@ title: Curriculum
     ==================================================
     Slider Section Start
     ================================================== -->
-<section id="hero-area">
+<section id="hero-area" class="hero-curric">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
