--- a/curriculum.html
+++ b/curriculum.html
@@ -95,7 +95,7 @@ title: Curriculum
 
             </div>
             <div class="col-md-6 col-sm-6">
-                <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
+                <div class="block">
                     <img src="/ciarastotspublic/images/annie-spratt-66432-min.jpg" alt="">
                 </div>
             </div>
